MS changes made during the meeting

--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -72,11 +72,16 @@ In the tenth annual AMC task, the highest performing model reached 69.83% accura
 
 Across regression and classification paradigms, a wide range of models have been employed, ranging from linear regression models [@saizclar2022pr; @griffiths2021am; @yang2008] to deep neural networks [@orjesek2022en; @hizlisoy2021mu]. In classification tasks, early work has commonly employed Gaussian mixture models [@lu_automatic_2005; @liu_automatic_2003] and support vector machines [@mandel2007labrosa; @lin2009eeg; @tzanetakis2007marsyas], whereas convolutional, recurrent, and fully-connected neural networks have become increasingly popular in recent years [@grekow2021music; @song2018audio; @coutinho2017sh]. In regression tasks, a wide range of algorithms have been tested, including partial least squares [@gingras2014be; @wang2021ac], support vector machines [@grekow2018au; @hu2017cr; @agarwal2021an], random forests [@beveridge2018po; @xu2021us], and convolutional neural networks [@orjesek2022en].
 
-## Large vs. small data
+## Dataset size and scope
 
-MER tasks commonly apply regression and classification techniques to diverse datasets with features drawn from both music (e.g., audio, MIDI, metadata) and participants (e.g., demographic information, survey responses, physiological signals, etc.). To facilitate model comparison, several databases have been shared publicly, including MediaEval [@soleymani2013], DEAM [@aljanaki2017developing], and AMG1608 [@chen2015amg1608]. These datasets represent Western pop music, are moderate in terms of the size (containing from 744 to 1802 music excerpts) and have been manually annotated by a relatively large number of participants (either by experts, students, or crowdsourced workers). Many datasets include audio features analyzed with software toolboxes for audio analysis such as OpenSMILE [@eyben2010opensmile] and MIRToolbox [@lartillot2007matlab] -- enabling models that predict ratings using tens, or even hundreds, of audio features. Large datasets are ideal for generalizing predictions across diverse musical samples and are commonly employed in machine learning applications focused on maximizing accuracy of a MER system. 
+MER tasks commonly apply regression and classification techniques to diverse datasets with features drawn from both music (e.g., audio, MIDI, metadata) and participants (e.g., demographic information, survey responses, physiological signals, etc.). To facilitate model comparison, several databases have been shared publicly, including MediaEval [@soleymani2013], DEAM [@aljanaki2017developing], and AMG1608 [@chen2015amg1608]. These datasets represent Western pop music, are moderate in terms of the size (containing from 744 to 1802 music excerpts) and have been manually annotated by a relatively large number of participants (either by experts, students, or crowdsourced workers). Many datasets include audio features analyzed with software toolboxes for audio analysis such as OpenSMILE [@eyben2010opensmile] and MIRToolbox [@lartillot2007matlab] -- enabling models that predict ratings using tens, or even hundreds, of audio features. 
 
-Although training MER systems with a wide range of stimuli and features can be useful for generalizable and accurate modeling, small datasets can be more appropriate in explorations that require precise control of stimuli or analyzed features to understand a model's performance. For example,  @griffiths2021am evaluated a MER model's performance when predicting 20 tracks different genres, validating the model on another 40 tracks. @saizclar2022pr evaluated how onset curves (changes in the energy of a note starting from its onset) can be incorporated into a predictive framework using 40 short (8-12s) piano excerpts. Smaller datasets are also useful in studies attempting to explain how stimulus qualities such as amplitude normalization [@gingras2014be] or different performers' interpretations [@battcock2021in] affect ratings of valence and arousal. Although these studies are not always designed with MER applications in mind, their similar framework has enabled direct application [e.g., @chowdhury2021perceived]. 
+REVISE:
+Large datasets are ideal for generalizing predictions across diverse musical samples and are commonly employed in machine learning applications focused on maximizing accuracy of a MER system. 
+
+IDEA: LARGE data requirements for machine-learning/deep learning, but annotating music is resource-intensive.
+
+Although training MER systems with a wide range of stimuli and features can be useful for generalizable and accurate modeling, small datasets can be more appropriate in explorations that require precise control of stimuli or analyzed features to understand a model's performance. For example,  @griffiths2021am evaluated a MER model's performance when predicting 20 tracks different genres, validating the model on another 40 tracks. @saizclar2022pr evaluated how onset curves (changes in the energy of a note starting from its onset) can be incorporated into a predictive framework using 40 short (8-12s) piano excerpts. Smaller datasets are also useful in studies attempting to explain how stimulus qualities such as amplitude normalization [@gingras2014be] or different performers' interpretations [@battcock2021in] affect ratings of valence and arousal. Although predictive modeling is not always an explicit goal of these studies, MER researchers have been able to adapt them in a MER framework [e.g., @chowdhury2021perceived]. 
 
 ## The current benchmarks of MER
 
@@ -93,9 +98,9 @@ Although training MER systems with a wide range of stimuli and features can be u
 -->
 ```
 
-Prediction accuracy in MER tasks has improved as datasets and models have become more sophisticated; The regression models for arousal/valence was 58%/28% in 2008 [@yang2008], 70%/26% in 2010 [@huq2010automated], to 67%/46% in 2021 [@yang2021an]. The classification rates have similarly increased from 53% [@downie_music_2008] to 70% [@park2017representation] to 83% [@sarkar2020recognition] in the same period. Comparing these past efforts is challenging due to inconsistencies in metrics, modelling architectures, datasets, and model evaluation criteria. While we assume that overall accuracy has improved significantly over the past decade, predicting valence remains more challenging than predicting arousal.  
+Prediction accuracy in MER tasks has improved as datasets and models have become more sophisticated; The regression models for arousal/valence was 58%/28% in 2008 [@yang2008], 70%/26% in 2010 [@huq2010automated], to 67%/46% in 2021 [@yang2021an]. The classification rates have similarly increased from 53% [@downie_music_2008] to 70% [@park2017representation] to 83% [@sarkar2020recognition] in the same period. Comparing these past efforts, however, is challenging due to inconsistencies in metrics, modelling architectures, datasets, and model evaluation criteria. While we assume that overall accuracy has improved significantly over the past decade, predicting valence remains more challenging than predicting arousal.
 
-Researchers have sought to enhance emotion prediction by identifying more relevant feature sets [@panda2020audio; @chowdhury2021perceived], integrating low-, mid-, and high-level features through multimodal data [@celma_foafing_2006], and leveraging neural networks to learn features directly from audio [@zhang2016br; @alvarez2023ri; @agarwal2021an]. These approaches aim to overcome what has been described as a *glass ceiling* in MER research [@downie_music_2008] -- a limitation sometimes referred to as the *semantic gap* [@wiggins_semantic_2009]. However, this ceiling may be better understood as an inherent measurement error arising from annotations, feature representations, and model limitations. While isolating the sources of these errors remains infeasible at this stage, comparing success rates across modeling techniques, feature set sizes, and other meaningful factors offers a step toward addressing this challenge. To date, however, no study has systematically compared the results of the diverse approaches employed in MER research. 
+Researchers have sought to enhance emotion prediction by identifying more relevant feature sets [@panda2020audio; @chowdhury2021perceived], integrating low-, mid-, and high-level features through multimodal data [@celma_foafing_2006], and leveraging neural networks to learn features directly from audio [@zhang2016br; @alvarez2023ri; @agarwal2021an]. These approaches aim to overcome what has been described as a _glass ceiling_ in MER research [@downie_music_2008] -- a limitation sometimes referred to as the _semantic gap_ [@wiggins_semantic_2009;@celma_foafing_2006]. However, this prediction ceiling may be better understood as an inherent _measurement error_ arising from annotations, feature representations, and model limitations. While isolating the sources of these errors remains infeasible at this stage, comparing success rates across modeling techniques, feature set sizes, and other meaningful factors offers a step toward addressing this challenge. To date, however, no study has systematically compared the results of the diverse approaches employed in MER research. 
 
 ## Aims
 
