Font edits to heatmap and MS edits to introduction

--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -74,12 +74,9 @@ Across regression and classification paradigms, a wide range of models have been
 
 ## Dataset size and scope
 
-MER tasks commonly apply regression and classification techniques to diverse datasets with features drawn from both music (e.g., audio, MIDI, metadata) and participants (e.g., demographic information, survey responses, physiological signals, etc.). To facilitate model comparison, several databases have been shared publicly, including MediaEval [@soleymani2013], DEAM [@aljanaki2017developing], and AMG1608 [@chen2015amg1608]. These datasets represent Western pop music, are moderate in terms of the size (containing from 744 to 1802 music excerpts) and have been manually annotated by a relatively large number of participants (either by experts, students, or crowdsourced workers). Many datasets include audio features analyzed with software toolboxes for audio analysis such as OpenSMILE [@eyben2010opensmile] and MIRToolbox [@lartillot2007matlab] -- enabling models that predict ratings using tens, or even hundreds, of audio features. 
+MER tasks commonly apply regression and classification techniques to diverse datasets with features drawn from both music (e.g., audio, MIDI, metadata) and participants (e.g., demographic information, survey responses, physiological signals, etc.). To facilitate model comparison, several databases have been shared publicly, including _MediaEval_ [@soleymani2013], _DEAM_ [@aljanaki2017developing], and _AMG1608_ [@chen2015amg1608]. These datasets represent Western pop music, are moderate in terms of the size (containing from 744 to 1802 music excerpts) and have been manually annotated by a relatively large number of participants (either by experts, students, or crowdsourced workers). Many datasets include audio features analyzed with software toolboxes for audio analysis such as _OpenSMILE_ [@eyben2010opensmile] and _MIRToolbox_ [@lartillot2007matlab] -- enabling models that predict ratings using tens, or even hundreds, of audio features. 
 
-REVISE:
-Large datasets are ideal for generalizing predictions across diverse musical samples and are commonly employed in machine learning applications focused on maximizing accuracy of a MER system. 
-
-IDEA: LARGE data requirements for machine-learning/deep learning, but annotating music is resource-intensive.
+Large datasets are needed to generalize predictions across diverse samples, especially for deep learning and complex machine-learning models that require extensive pre-training. However, the dataset sizes in MER tend to be modest in comparison, as direct annotation of music examples is resource-intensive. In contrast, datasets in the visual domain are often significantly larger (e.g., _EmoSet_ with 118,102 images and _AffectNet_ with 450,000, see @yang2023emoset;@mollahosseini2017affectnet). Some efforts have been made to scale up MER datasets by inferring emotions from tags (_MTG-Jamendo_ with 18,486 excerpts @bogdanov2019mtg and _Music4all_ with 109,269 excerpts @santana2020), but these have not found their way into standard emotion prediction or classification tasks yet.
 
 Although training MER systems with a wide range of stimuli and features can be useful for generalizable and accurate modeling, small datasets can be more appropriate in explorations that require precise control of stimuli or analyzed features to understand a model's performance. For example,  @griffiths2021am evaluated a MER model's performance when predicting 20 tracks different genres, validating the model on another 40 tracks. @saizclar2022pr evaluated how onset curves (changes in the energy of a note starting from its onset) can be incorporated into a predictive framework using 40 short (8-12s) piano excerpts. Smaller datasets are also useful in studies attempting to explain how stimulus qualities such as amplitude normalization [@gingras2014be] or different performers' interpretations [@battcock2021in] affect ratings of valence and arousal. Although predictive modeling is not always an explicit goal of these studies, MER researchers have been able to adapt them in a MER framework [e.g., @chowdhury2021perceived]. 
 
