--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,29 +1,69 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Tuomas Eerola at 2025-03-07 13:46:46 +0000 
+%% Created for Tuomas Eerola at 2025-03-28 09:01:55 +0000 
 
 
-%% Saved with string encoding Unicode (UTF-8)
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@inproceedings{santana2020,
+	author = {Santana, Igor Andr{\'e} Pegoraro and Pinhelli, Fabio and Donini, Juliano and Catharin, Leonardo and Mangolin, Rafael Biazus and Feltrim, Val{\'e}ria Delisandra and Domingues, Marcos Aur{\'e}lio and others},
+	booktitle = {2020 International Conference on Systems, Signals and Image Processing ({{IWSSIP}})},
+	date-added = {2025-03-28 08:44:53 +0000},
+	date-modified = {2025-03-28 09:01:55 +0000},
+	pages = {399--404},
+	publisher = {IEEE},
+	title = {Music4all: {{A}} New Music Database and Its Applications},
+	year = {2020}}
+
+@inproceedings{bogdanov2019mtg,
+	address = {Long Beach, CA, United States},
+	author = {Bogdanov, Dmitry and Won, Minz and Tovstogan, Philip and Porter, Alastair and Serra, Xavier},
+	booktitle = {Machine Learning for Music Discovery Workshop, International Conference on Machine Learning ({{ICML}} 2019)},
+	date-added = {2025-03-28 08:43:59 +0000},
+	date-modified = {2025-03-28 08:43:59 +0000},
+	title = {The {{MTG-jamendo}} Dataset for Automatic Music Tagging},
+	year = {2019}}
+
+@article{mollahosseini2017affectnet,
+	author = {Mollahosseini, Ali and Hasani, Behzad and Mahoor, Mohammad H},
+	date-added = {2025-03-28 08:40:54 +0000},
+	date-modified = {2025-03-28 08:40:54 +0000},
+	journal = {IEEE Transactions on Affective Computing},
+	number = {1},
+	pages = {18--31},
+	publisher = {IEEE},
+	title = {Affectnet: A database for facial expression, valence, and arousal computing in the wild},
+	volume = {10},
+	year = {2017}}
+
+@inproceedings{yang2023emoset,
+	author = {Yang, Jingyuan and Huang, Qirui and Ding, Tingting and Lischinski, Dani and Cohen-Or, Danny and Huang, Hui},
+	booktitle = {Proceedings of the IEEE/CVF International Conference on Computer Vision},
+	date-added = {2025-03-28 08:40:09 +0000},
+	date-modified = {2025-03-28 08:40:09 +0000},
+	pages = {20383--20394},
+	title = {Emoset: A large-scale visual emotion dataset with rich attributes},
+	year = {2023}}
 
 @article{huq2010automated,
-  title={Automated music emotion recognition: A systematic evaluation},
-  author={Huq, Arefin and Bello, Juan Pablo and Rowe, Robert},
-  journal={Journal of New Music Research},
-  volume={39},
-  number={3},
-  pages={227--244},
-  year={2010},
-  publisher={Taylor \& Francis}
-}
+	author = {Huq, Arefin and Bello, Juan Pablo and Rowe, Robert},
+	journal = {Journal of New Music Research},
+	number = {3},
+	pages = {227--244},
+	publisher = {Taylor \& Francis},
+	title = {Automated music emotion recognition: A systematic evaluation},
+	volume = {39},
+	year = {2010}}
 
 @inproceedings{sun2017revisiting,
-  title={Revisiting unreasonable effectiveness of data in deep learning era},
-  author={Sun, Chen and Shrivastava, Abhinav and Singh, Saurabh and Gupta, Abhinav},
-  booktitle={Proceedings of the IEEE international conference on computer vision},
-  pages={843--852},
-  year={2017}
-}
+	author = {Sun, Chen and Shrivastava, Abhinav and Singh, Saurabh and Gupta, Abhinav},
+	booktitle = {Proceedings of the IEEE international conference on computer vision},
+	pages = {843--852},
+	title = {Revisiting unreasonable effectiveness of data in deep learning era},
+	year = {2017}}
 
 @article{alwosheel2018,
 	abstract = {Artificial Neural Networks (ANNs) are increasingly used for discrete choice analysis. But, at present, it is unknown what sample size requirements are appropriate when using ANNs in this particular context. This paper fills this knowledge gap: we empirically establish a rule-of-thumb for ANN-based discrete choice analysis based on analyses of synthetic and real data. To investigate the effect of complexity of the data generating process on the minimum required sample size, we conduct extensive Monte Carlo analyses using a series of different model specifications with different levels of model complexity, including RUM and RRM models, with and without random taste parameters. Based on our analyses we advise to use a minimum sample size of fifty times the number of weights in the ANN; it should be noted, that the number of weights is generally much larger than the number of parameters in a discrete choice model. This rule-of-thumb is considerably more conservative than the rule-of-thumb that is most often used in the ANN community, which advises to use at least ten times the number of weights.},
@@ -37,14 +77,12 @@
 	volume = {28},
 	year = {2018}}
 
-
 @inproceedings{eyben2010opensmile,
-  title={Opensmile: the munich versatile and fast open-source audio feature extractor},
-  author={Eyben, Florian and W{\"o}llmer, Martin and Schuller, Bj{\"o}rn},
-  booktitle={Proceedings of the 18th ACM international conference on Multimedia},
-  pages={1459--1462},
-  year={2010}
-}
+	author = {Eyben, Florian and W{\"o}llmer, Martin and Schuller, Bj{\"o}rn},
+	booktitle = {Proceedings of the 18th ACM international conference on Multimedia},
+	pages = {1459--1462},
+	title = {Opensmile: the munich versatile and fast open-source audio feature extractor},
+	year = {2010}}
 
 @article{gingras2014be,
 	author = {Gingras, Bruno and Marin, Manuela M. and Fitch, W. Tecumseh},
@@ -61,60 +99,53 @@
 	year = {2014}}
 
 @article{grekow2021music,
-  title={Music emotion recognition using recurrent neural networks and pretrained models},
-  author={Grekow, Jacek},
-  journal={Journal of Intelligent Information Systems},
-  volume={57},
-  number={3},
-  pages={531--546},
-  year={2021},
-  publisher={Springer}
-}
+	author = {Grekow, Jacek},
+	journal = {Journal of Intelligent Information Systems},
+	number = {3},
+	pages = {531--546},
+	publisher = {Springer},
+	title = {Music emotion recognition using recurrent neural networks and pretrained models},
+	volume = {57},
+	year = {2021}}
 
 @incollection{song2018audio,
-  title={Audio classification tasks using recurrent neural network},
-  author={Song, Guangxiao and Ding, Shenyi and Wang, Zhijie},
-  booktitle={MIREX 2018-Music Information Retrieval Evaluation eXchange},
-  year={2018}
-}
+	author = {Song, Guangxiao and Ding, Shenyi and Wang, Zhijie},
+	booktitle = {MIREX 2018-Music Information Retrieval Evaluation eXchange},
+	title = {Audio classification tasks using recurrent neural network},
+	year = {2018}}
 
 @incollection{bovcondemoc,
-  title={DEMOC-A deep audio mood classification method},
-  author={Bovcon, Borja and Marolt, Matija},
-  booktitle={MIREX 2017-Music Information Retrieval Evaluation eXchange},
-  year={2017}
-}
+	author = {Bovcon, Borja and Marolt, Matija},
+	booktitle = {MIREX 2017-Music Information Retrieval Evaluation eXchange},
+	title = {DEMOC-A deep audio mood classification method},
+	year = {2017}}
 
 @inproceedings{lin2009eeg,
-  title={EEG-based emotion recognition in music listening: A comparison of schemes for multiclass support vector machine},
-  author={Lin, Yuan-Pin and Wang, Chi-Hong and Wu, Tien-Lin and Jeng, Shyh-Kang and Chen, Jyh-Horng},
-  booktitle={2009 IEEE international conference on acoustics, speech and signal processing},
-  pages={489--492},
-  year={2009},
-  organization={IEEE}
-}
+	author = {Lin, Yuan-Pin and Wang, Chi-Hong and Wu, Tien-Lin and Jeng, Shyh-Kang and Chen, Jyh-Horng},
+	booktitle = {2009 IEEE international conference on acoustics, speech and signal processing},
+	organization = {IEEE},
+	pages = {489--492},
+	title = {EEG-based emotion recognition in music listening: A comparison of schemes for multiclass support vector machine},
+	year = {2009}}
 
 @inproceedings{tzanetakis2007marsyas,
-  title={Marsyas submissions to MIREX 2007},
-  author={Tzanetakis, George},
-  booktitle={MIREX 2007-Music Information Retrieval Evaluation eXchange},
-  year={2007}
-}
+	author = {Tzanetakis, George},
+	booktitle = {MIREX 2007-Music Information Retrieval Evaluation eXchange},
+	title = {Marsyas submissions to MIREX 2007},
+	year = {2007}}
 
 @incollection{mandel2007labrosa,
-  title={LABROSA’s audio music similarity and classification submissions},
-  author={Mandel, M and Ellis, D},
-  journal={MIREX 2007-Music Information Retrieval Evaluation eXchange},
-  year={2007}
-}
+	author = {Mandel, M and Ellis, D},
+	journal = {MIREX 2007-Music Information Retrieval Evaluation eXchange},
+	title = {LABROSA's audio music similarity and classification submissions},
+	year = {2007}}
 
 @inproceedings{mashao2003co,
-  title={Comparing SVM and GMM on parametric feature-sets},
-  author={Mashao, Daniel J},
-  booktitle={Proceedings of the 14th Annual Symposium of the Pattern Recognition Association of South Africa},
-  pages={27--28},
-  year={2003},
-}
+	author = {Mashao, Daniel J},
+	booktitle = {Proceedings of the 14th Annual Symposium of the Pattern Recognition Association of South Africa},
+	pages = {27--28},
+	title = {Comparing SVM and GMM on parametric feature-sets},
+	year = {2003}}
 
 @article{schindler2017me,
 	author = {Schindler, Ines and Hosoya, Georg and Menninghaus, Winfried and Beermann, Ursula and Wagner, Valentin and Eid, Michael and Scherer, Klaus R},
@@ -127,16 +158,6 @@
 	title = {Measuring aesthetic emotions: A review of the literature and a new assessment tool},
 	volume = {12},
 	year = {2017}}
-
-@inproceedings{santana2020,
-	author = {Santana, Igor Andr{\'e} Pegoraro and Pinhelli, Fabio and Donini, Juliano and Catharin, Leonardo and Mangolin, Rafael Biazus and Feltrim, Val{\'e}ria Delisandra and Domingues, Marcos Aur{\'e}lio and others},
-	booktitle = {2020 International Conference on Systems, Signals and Image Processing ({{IWSSIP}})},
-	date-added = {2025-02-26 11:17:01 +0000},
-	date-modified = {2025-02-26 11:17:08 +0000},
-	pages = {399--404},
-	publisher = {IEEE},
-	title = {Music4all: {{A}} New Music Database and Its Applications},
-	year = {2020}}
 
 @article{akiki2021,
 	abstract = {The MuSe (Music Sentiment) dataset contains sentiment information for 90,001 songs. We computed scores for the affective dimensions of valence, dominance, and arousal, based on the user-generated tags that are available for each song via Last.fm. In addition, we provide artist, title and genre metadata, and a MusicBrainz ID and a Spotify ID, which allow researchers to extend the dataset with further metadata.},
@@ -1030,8 +1051,7 @@
 	title = {Are the emotions expressed in music genre-specific? An audio-based evaluation of datasets spanning classical, film, pop and mixed genres},
 	url = {https://doi.org/10.1080/09298215.2011.602195},
 	volume = {40},
-	year = {2011}
-	}
+	year = {2011}}
 
 @article{lindstrom2003expressivity,
 	author = {Lindstr{\"o}m, Erik and Juslin, Patrik N and Bresin, Roberto and Williamon, Aaron},
@@ -1109,8 +1129,7 @@
 	title = {Emotional Expression in Music: Contribution, Linearity, and Additivity of Primary Musical Cues},
 	url = {http://www.frontiersin.org/emotion_science/10.3389/fpsyg.2013.00487/abstract},
 	volume = {4},
-	year = {2013},
-}
+	year = {2013}}
 
 @inproceedings{soleymani2013,
 	abstract = {Music is composed to be emotionally expressive, and emotional associations provide an especially natural domain for indexing and recommendation in today's vast digital music libraries. But such libraries require powerful automated tools, and the development of systems for automatic prediction of musical emotion presents a myriad challenges. The perceptual nature of musical emotion necessitates the collection of data from human subjects. The interpretation of emotion varies between listeners thus each clip needs to be annotated by a distribution of subjects. In addition, the sharing of large music content libraries for the development of such systems, even for academic research, presents complicated legal issues which vary by country. This work presents a new publicly available dataset for music emotion recognition research and a baseline system. In addressing the difficulties of emotion annotation we have turned to crowdsourcing, using Amazon Mechanical Turk, and have developed a two-stage procedure for filtering out poor quality workers. The dataset consists entirely of creative commons music from the Free Music Archive, which as the name suggests, can be shared freely without penalty. The final dataset contains 1000 songs, each annotated by a minimum of 10 subjects, which is larger than many currently available music emotion dataset.},
@@ -1141,8 +1160,7 @@
 	pages = {122-135},
 	title = {Genre-adaptive Semantic Computing and Audio-based Modelling for Music Mood Annotation},
 	volume = {7},
-	year = {2015}
-}
+	year = {2015}}
 
 @article{aljanaki2017developing,
 	author = {Aljanaki, A. and Yang, Y.-H. and Soleymani, M.},
@@ -1179,8 +1197,7 @@
 	status = {published},
 	title = {An Interactive Approach to Emotional Expression through Musical Cues},
 	volume = {5},
-	year = {2022}
-}
+	year = {2022}}
 
 @article{panda2020audio,
 	author = {Panda, R. and Malheiro, Ricardo and Paiva, Rui Pedro},
@@ -1219,9 +1236,7 @@
 	title = {A review of music and emotion studies: Approaches, emotion models and stimuli},
 	url = {https://doi.org/10.1525/mp.2012.30.3.307},
 	volume = {30},
-	year = {2012}
-	}
-
+	year = {2012}}
 
 @article{juslin2014makes,
 	author = {Juslin, P. N. and Harmat, L{\'a}szl{\'o} and Eerola, T.},
@@ -1248,8 +1263,7 @@
 	title = {From Sound to Significance: Exploring the Mechanisms Underlying Emotional Reactions to Music},
 	url = {https://doi.org/10.5406/amerjpsyc.128.3.0281},
 	volume = {128},
-	year = {2015},
-}
+	year = {2015}}
 
 @article{Mehr2019universality,
 	author = {Mehr, Samuel A. and Singh, Manvir and Knox, Dean and Ketter, Daniel M. and Pickens-Jones, Daniel and Atwood, S. and Lucas, Christopher and Jacoby, Nori and Egner, Alena A. and Hopkins, Erin J. and Howard, Rhea M. and Hartshorne, Joshua K. and Jennings, Mariela V. and Simson, Jan and Bainbridge, Constance M. and Pinker, Steven and O{\textquoteright}Donnell, Timothy J. and Krasnow, Max M. and Glowacki, Luke},
@@ -1281,8 +1295,7 @@
 	status = {accepted},
 	title = {Music Emotion Recognition: Toward new, robust standards in personalized and context-sensitive applications},
 	volume = {38},
-	year = {2021}
-	}
+	year = {2021}}
 
 @article{juslin2022emotions,
 	author = {Juslin, P. N. and Sakka, Laura S and Barradas, Gon{\c{c}}alo T and Lartillot, Olivier},
